using credentialsDirectory